# citra-valentin

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml  azure-pipelines.yml  changelog.md  readme.md
.appveyor/: FindDependencies.ps1  ProcessPdb.ps1
.travis/common/: get-version.py  get_version.py  post-upload.sh  pre-upload.sh  travis-ci.env
.travis/linux/: docker.sh  upload.sh
.travis/linux-mingw/: docker.sh  scan_dll.py  upload.sh
.travis/macos/: build.sh  upload.sh
.travis/windows/: after-success.ps1  build.ps1  install.ps1
src/: CMakeLists.txt
src/android/: .gitignore
src/audio_core/: CMakeLists.txt  codec.cpp  codec.h  cubeb_input.cpp  cubeb_input.h  cubeb_sink.cpp  dsp_interface.cpp  interpolate.cpp  sink_details.cpp
src/audio_core/hle/: hle.cpp  source.cpp  source.h
src/audio_core/lle/: lle.cpp
src/citra/: CMakeLists.txt  citra.cpp  config.cpp  default_ini.h  lodepng_image_interface.cpp  lodepng_image_interface.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_qt/: CMakeLists.txt  Info.plist  aboutdialog.cpp  aboutdialog.ui  bootmanager.cpp  bootmanager.h  cheats.cpp  discord_rp.cpp  discord_rp.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  main.cpp  main.h  main.ui  qt_buttons.cpp  qt_buttons.h  qt_image_interface.cpp  qt_image_interface.h  uisettings.h
src/citra_qt/applets/: mii_selector.cpp  swkbd.cpp
src/citra_qt/camera/: camera_util.cpp  dshow_camera.cpp  dshow_camera.h  pipe_camera.cpp  pipe_camera.h  qt_camera_base.cpp  qt_multimedia_camera.cpp  still_image_camera.cpp
src/citra_qt/configuration/: config.cpp  config.h  configure.ui  configure_audio.cpp  configure_audio.h  configure_audio.ui  configure_camera.cpp  configure_camera.h  configure_camera.ui  configure_custom_layout.cpp  configure_custom_layout.h  configure_custom_layout.ui  configure_debug.cpp  configure_debug.h  configure_debug.ui  configure_dialog.cpp  configure_dialog.h  configure_enhancements.cpp  configure_enhancements.h  configure_enhancements.ui  configure_general.cpp  configure_general.h  configure_general.ui  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_hotkeys.cpp  configure_hotkeys.h  configure_hotkeys.ui  configure_input.cpp  configure_input.h  configure_input.ui  configure_motion_touch.cpp  configure_motion_touch.ui  configure_releases.cpp  configure_releases.h  configure_releases.ui  configure_system.cpp  configure_system.h  configure_system.ui  (+11 more)
src/citra_qt/configuration/groups/: config_audio.cpp  config_camera.cpp  config_controls.cpp  config_core.cpp  config_data_storage.cpp  config_debugging.cpp  config_game_list.cpp  config_hacks.cpp  config_layout.cpp  config_lle.cpp  config_miscellaneous.cpp  config_multiplayer.cpp  config_paths.cpp  config_renderer.cpp  config_shortcuts.cpp  config_system.cpp  config_ui.cpp  config_ui_layout.cpp  config_utility.cpp  config_web_service.cpp
src/citra_qt/debugger/: discord_logger.cpp  discord_logger.h  lle_service_modules.cpp  lle_service_modules.h  profiler.cpp  profiler.h  profiler.ui  registers.cpp  wait_tree.cpp
src/citra_qt/debugger/graphics/: graphics.cpp  graphics.h  graphics_breakpoints.cpp  graphics_breakpoints.h  graphics_cmdlists.cpp  graphics_cmdlists.h  graphics_surface.cpp  graphics_tracing.cpp  graphics_vertex_shader.cpp
src/citra_qt/debugger/ipc/: record_dialog.cpp  recorder.cpp  recorder.h
src/citra_qt/multiplayer/: chat_room.cpp  chat_room.h  chat_room.ui  client_room.cpp  client_room.h  direct_connect.cpp  direct_connect.h  host_room.cpp  host_room.h  host_room.ui  lobby.cpp  lobby.h  lobby_p.h  message.cpp  message.h  moderation_dialog.cpp  state.cpp  state.h
src/citra_qt/util/: discord.cpp  discord.h  spinbox.cpp
src/citra_qt/util/sequence_dialog/: sequence_dialog.cpp
src/common/: CMakeLists.txt  bit_set.h  common_paths.h  detached_tasks.cpp  file_util.cpp  file_util.h  linear_disk_cache.h  param_package.cpp  profiler.h  string_util.cpp  string_util.h  texture.cpp  texture.h  thread.cpp  thread.h  thread_pool.h  threadsafe_queue.h  version.cpp  version.h
src/common/logging/: backend.cpp  filter.cpp
src/common/x64/: cpu_detect.cpp
src/core/: CMakeLists.txt  announce_multiplayer_session.cpp  core.cpp  core.h  core_timing.cpp  core_timing.h  custom_tex_cache.cpp  custom_tex_cache.h  memory.cpp  movie.cpp  movie.h  perf_stats.cpp  settings.cpp  settings.h
src/core/cheats/: cheats.cpp  gateway_cheat.cpp
src/core/dumping/: ffmpeg_backend.cpp
src/core/file_sys/: archive_extsavedata.cpp  archive_ncch.cpp  archive_other_savedata.cpp  archive_sdmc.cpp  disk_archive.cpp  ncch_container.cpp  patch.cpp  path_parser.cpp  savedata_archive.cpp  seed_db.cpp  ticket.cpp  title_metadata.cpp  title_metadata.h
src/core/frontend/: emu_window.cpp  image_interface.h
src/core/gdbstub/: gdbstub.cpp
src/core/hw/: gpu.cpp  gpu.h  y2r.cpp
src/core/loader/: 3dsx.cpp  ncch.cpp
src/core/rpc/: packet.h  udp_server.cpp
src/core/tracer/: citrace.h  recorder.cpp
src/dedicated_room/: CMakeLists.txt  citra-room.cpp
src/input_common/: analog_from_button.cpp  keyboard.cpp  motion_emu.cpp
src/input_common/sdl/: sdl_impl.cpp
src/input_common/udp/: client.cpp  protocol.h  udp.cpp
src/network/: room.cpp  room.h  room_member.cpp
src/tests/: tests.cpp
src/tests/audio_core/: decoder_tests.cpp
src/video_core/: command_processor.cpp  gpu_debugger.h  pica.cpp  pica_state.h  rasterizer_interface.h  regs.cpp  regs_framebuffer.h  regs_lighting.h  regs_pipeline.h  regs_shader.h  regs_texturing.h  vertex_loader.cpp  vertex_loader.h  video_core.cpp  video_core.h
src/video_core/debug_utils/: debug_utils.cpp  debug_utils.h
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_resource_manager.cpp  gl_shader_decompiler.cpp  gl_shader_disk_cache.cpp  gl_shader_disk_cache.h  (+11 more)
src/web_service/: CMakeLists.txt  announce_room_json.cpp  verify_login.cpp  verify_user_jwt.cpp  web_backend.cpp
(+89 files in other folders)
